rnsc/tests/snapshots/error-parser-mangled_name_directive-missing_operand.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; Tests that missing operand after .mangled_name is detected and reported.
; Expected error: E-020 (missing implicit type hint operand)

.class public MyClass
.super java/lang/Object

.inner Inner
    .super java/lang/Object
    .mangled_name
.inner_end

.class_end
----- STDERR -----
[E-020] Error: missing class name after '.mangled_name'
   ╭─[ test_data/rns_integration/error/parser/mangled_name_directive/missing_operand.rns:9:5 ]
   │
 9 │     .mangled_name
   │     ──────┬──────│ 
   │           ╰──────── the '.mangled_name' directive requires a mangled name as operand
   │                  │ 
   │                  ╰─ but class name is missing
   │ 
   │ Help: Provide a mangled name after the '.mangled_name' directive, e.g.:
   │       .mangled_name <class_name>
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-020
───╯
----- JAVAP -----
not generated
